--- a/ihris-backend/ihris-backend-site/ig/fsh-generated/resources/StructureDefinition-ihris-parameters-local-config.json
+++ b/ihris-backend/ihris-backend-site/ig/fsh-generated/resources/StructureDefinition-ihris-parameters-local-config.json
@@ -1,6 +1,12 @@
 {
   "resourceType": "StructureDefinition",
   "id": "ihris-parameters-local-config",
+  "extension": [
+    {
+      "url": "http://hl7.org/fhir/StructureDefinition/structuredefinition-category",
+      "valueString": "Foundation.Other"
+    }
+  ],
   "url": "http://ihris.org/fhir/StructureDefinition/ihris-parameters-local-config",
   "version": "0.1.0",
   "name": "IhrisParametersLocalConfig",
