--- a/ihris-backend/package.json
+++ b/ihris-backend/package.json
@@ -46,9 +46,12 @@
     "passport-local": "^1.0.0",
     "pdf-lib": "^1.17.1",
     "pify": "^5.0.0",
+    "pluralize": "^8.0.0",
     "qrcode": "^1.5.3",
     "redis": "^3.1.1",
     "require-from-string": "^2.0.2",
+    "sequelize": "^6.37.1",
+    "sqlstring": "^2.3.3",
     "supertest": "^4.0.2",
     "urijs": "^1.19.6",
     "url": "^0.11.0",
