add mkdocs-video video plugin

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -17,4 +17,5 @@ jobs:
       - run: pip install mkdocs-pdf-export-plugin
       - run: pip install mkdocs-git-revision-date-localized-plugin
       - run: pip install mknotebooks
+      - run: pip install mkdocs-video
       - run: mkdocs gh-deploy --force
