add a config to change date format

--- a/ihris-backend/ihris-backend-site/ig/fsh-generated/resources/Parameters-ihris-config.json
+++ b/ihris-backend/ihris-backend-site/ig/fsh-generated/resources/Parameters-ihris-config.json
@@ -787,6 +787,10 @@
           "valueString": "$1"
         },
         {
+          "name": "defaults:format:date",
+          "valueString": "dddd, MMMM Do YYYY"
+        },
+        {
           "name": "workflow:processor:endrole:file",
           "valueString": "workflowEndRole"
         },
