--- a/ihris-backend/package.json
+++ b/ihris-backend/package.json
@@ -15,6 +15,7 @@
     "date-fns": "^2.28.0",
     "debug": "~2.6.9",
     "dompurify": "^2.2.9",
+    "exceljs": "^4.4.0",
     "express": "~4.16.1",
     "express-fileupload": "^1.4.0",
     "express-session": "^1.17.2",
