--- a/packaging/ansible/ubuntu/tomcat.yaml
+++ b/packaging/ansible/ubuntu/tomcat.yaml
@@ -8,7 +8,7 @@
 
     - name: Download JDK 17
       get_url:
-        url: "https://download.oracle.com/java/{{java_ver}}/latest/jdk-{{java_ver}}_linux-x64_bin.deb"
+        url: "https://download.oracle.com/java/{{java_ver}}/archive/jdk-{{java_ver}}_linux-x64_bin.deb"
         dest: "/tmp/jdk-{{java_ver}}.deb"
 
     - name: Installing JDK {{java_ver}}
