modifying the way links on the login screen are displayed

--- a/packaging/ansible/ubuntu/ihris.yaml
+++ b/packaging/ansible/ubuntu/ihris.yaml
@@ -103,7 +103,7 @@
         - path: configfile.parameter[{{fhirbaseindex}}].valueString
           value: http://localhost:8080/fhir
         - path: configfile.parameter[{{esuserindex}}].valueString
-          value: {{ihriselastic}}
+          value: ihriselastic
       register: updated
 
     - name: Saving configuration file
