add mechanism to run ihris over https

--- a/ihris-backend/ihris-backend-site/config/baseConfig.json.example
+++ b/ihris-backend/ihris-backend-site/config/baseConfig.json.example
@@ -8,6 +8,14 @@
   },
   "parameter": [
     {
+      "name": "app:port",
+      "valueString": "3000"
+    },
+    {
+      "name": "app:protocal",
+      "valueString": "http"
+    },
+    {
       "name": "app:idp",
       "valueString": "ihris"
     },
